--- a/Fronte_End/assets/css/payment.css
+++ b/Fronte_End/assets/css/payment.css
@@ -1,118 +1,32 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:weight@100;200;300;400;500;600;700;800&display=swap");
-
-
-body{
-    background-or:#f5eee7;
-    font-family: "Poppins", sans-serif;
-    font-weight: 300;
+.popup {
+    position: fixed;
+    z-index: 2000;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.4);
+    display: none;
+}
+.popup-content {
+    background-color: white;
+    margin: 5% auto;
+    padding: 20px;
+    border: 1px solid #888888;
+    width: 35%;
+    font-weight: bolder;
+}
+.popup-content button {
+    display: block;
+    margin: 0 auto;
+}
+.show {
+    display: block;
 }
 
-.container{
-
-    height: 100vh;
-
-}
-
-.card{
-
+#closePopup{
     border: none;
-    width: 25vw;
-    height: 20vh;
-}
-
-.card-header {
-    padding: .5rem 1rem;
-    margin-bottom: 0;
-    background-color: rgba(0,0,0,.03);
-    border-bottom: none;
-}
-
-.btn-light:focus {
-    color: #212529;
-    background-color: #e2e6ea;
-    border-color: #dae0e5;
-    box-shadow: 0 0 0 0.2rem rgba(216,217,219,.5);
-}
-
-.form-control{
-
-    height: 50px;
-    border: 2px solid #eee;
-    border-radius: 6px;
-    font-size: 14px;
-}
-
-.form-control:focus {
-    color: #495057;
-    background-color: #fff;
-    border-color: #039be5;
-    outline: 0;
-    box-shadow: none;
-
-}
-
-.input{
-
-    position: relative;
-}
-
-.input i{
-
-    position: absolute;
-    top: 16px;
-    left: 11px;
-    color: #989898;
-}
-
-.input input{
-
-    text-indent: 25px;
-}
-
-.card-text{
-
-    font-size: 13px;
-    margin-left: 6px;
-}
-
-.certificate-text{
-
-    font-size: 12px;
-}
-
-
-.billing{
-    font-size: 11px;
-}
-
-.super-price{
-
-    top: 0px;
-    font-size: 22px;
-}
-
-.super-month{
-
-    font-size: 11px;
-}
-
-
-.line{
-    color: #bfbdbd;
-}
-
-.free-button{
-
-    background: #1565c0;
-    height: 52px;
-    font-size: 15px;
-    border-radius: 8px;
-}
-
-
-.payment-card-body{
-
-    flex: 1 1 auto;
-    padding: 24px 1rem !important;
-
+    display: inline-block;
+    margin-bottom: 10px;
 }
